--- a/static/login_styles.css
+++ b/static/login_styles.css
@@ -4,6 +4,12 @@
     text-align: center;
 }
 
+.flashes{
+    font-family: lucida;
+    color: teal;
+    text-align: center;
+}
+
 input[type=email]{
         width: 75%;
         padding: 10px;
